--- a/backbase/pom.xml
+++ b/backbase/pom.xml
@@ -10,6 +10,23 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
+	<!--   ######Test suite profiles######## -->
+	<profiles>
+		<profile>
+			<id>Smoke</id>
+				<properties>
+					<test.suite>smoke.xml</test.suite>
+				</properties>
+		</profile>
+		<profile>
+			<id>DataDrivenTest</id>
+				<properties>
+					<test.suite>DataDriventest.xml</test.suite>
+				</properties>
+
+		</profile>
+
+	</profiles>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 		<dependency>
@@ -35,7 +52,23 @@
 			<scope>test</scope>
 		</dependency>
 
-		
+
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.21.0</version>
+				<configuration>
+					<!-- TestNG Suite XML files list for test execution -->
+					<suiteXmlFiles>
+						<suiteXmlFile>{test.suite}</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 
 </project>
